force-app/main/default/objects/Rule__mdt/Rule__mdt.object-meta.xml
<CustomObject>
    <description>Individual analysis rule for detecting upgrade risks</description>
    <label>Rule</label>
    <pluralLabel>Rules</pluralLabel>
</CustomObject>