force-app/main/default/objects/Rule__mdt/fields/AppliesToType__c.field-meta.xml
<CustomField>
    <fullName>AppliesToType__c</fullName>
    <description>Artifact type this rule applies to</description>
    <label>Applies To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>ApexPage</fullName>
                <label>Visualforce Page</label>
            </value>
            <value>
                <fullName>ApexComponent</fullName>
                <label>Visualforce Component</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>