force-app/main/default/objects/Rule__mdt/fields/Blocking__c.field-meta.xml
<CustomField>
    <fullName>Blocking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether findings from this rule block deployment</description>
    <label>Blocking</label>
    <type>Checkbox</type>
</CustomField>