force-app/main/default/objects/Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the rule</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApiVersionRisk</fullName>
                <label>API Version Risk</label>
            </value>
            <value>
                <fullName>DeprecatedAPI</fullName>
                <label>Deprecated API</label>
            </value>
            <value>
                <fullName>MissingDependency</fullName>
                <label>Missing Dependency</label>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>BestPractice</fullName>
                <label>Best Practice</label>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>