force-app/main/default/objects/Rule__mdt/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <description>Rule pack this rule belongs to</description>
    <label>Pack</label>
    <referenceTo>RulePack__mdt</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>