force-app/main/default/objects/Rule__mdt/fields/Pattern__c.field-meta.xml
<CustomField>
    <fullName>Pattern__c</fullName>
    <description>Pattern to match in content</description>
    <label>Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>