force-app/main/default/objects/Rule__mdt/fields/PatternType__c.field-meta.xml
<CustomField>
    <fullName>PatternType__c</fullName>
    <description>Type of pattern matching</description>
    <label>Pattern Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regex</fullName>
                <default>true</default>
                <label>Regex</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>ASTHint</fullName>
                <label>AST Hint</label>
            </value>
            <value>
                <fullName>XMLPath</fullName>
                <label>XML Path</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>