force-app/main/default/objects/Rule__mdt/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <description>Unique identifier for this rule</description>
    <externalId>true</externalId>
    <label>Rule ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>