force-app/main/default/objects/Rule__mdt/fields/SuggestedAction__c.field-meta.xml
<CustomField>
    <fullName>SuggestedAction__c</fullName>
    <description>Suggested action to resolve findings from this rule</description>
    <label>Suggested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>