force-app/main/default/objects/Rule__mdt/fields/VersionDeltaMax__c.field-meta.xml
<CustomField>
    <fullName>VersionDeltaMax__c</fullName>
    <description>Maximum version delta for this rule to apply</description>
    <label>Version Delta Max</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>