force-app/main/default/objects/Rule__mdt/fields/VersionDeltaMin__c.field-meta.xml
<CustomField>
    <fullName>VersionDeltaMin__c</fullName>
    <description>Minimum version delta for this rule to apply</description>
    <label>Version Delta Min</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>